Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15049

qti_pools_add()) ASSERTION( qti->qti_pools_num >= QMT_MAX_POOL_NUM ) failed: Forgot init?

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 1098.750714] LustreError: 10512:0:(qmt_pool.c:323:qti_pools_add()) ASSERTION( qti->qti_pools_num >= QMT_MAX_POOL_NUM ) failed: Forgot init? 000000009603ba6d
      [ 1098.759979] LustreError: 10512:0:(qmt_pool.c:323:qti_pools_add()) LBUG
      [ 1098.761742] Pid: 10512, comm: mdt_rdpg00_000 4.18.0-193.19.1.el8_2.x86_64 #1 SMP Mon Sep 14 14:37:00 UTC 2020
      [ 1098.763988] Call Trace TBD:
      [ 1098.765223] [<0>] libcfs_call_trace+0x6f/0x90 [libcfs]
      [ 1098.766571] [<0>] lbug_with_loc+0x43/0x80 [libcfs]
      [ 1098.767979] [<0>] qti_pools_add+0x241/0x490 [lquota]
      [ 1098.769309] [<0>] qmt_pool_lookup+0x1b6/0x580 [lquota]
      [ 1098.770667] [<0>] qmt_pool_lqes_lookup+0x8e/0x910 [lquota]
      [ 1098.772090] [<0>] qmt_intent_policy+0x863/0xec0 [lquota]
      [ 1098.773649] [<0>] mdt_intent_opc+0x241/0xa70 [mdt]
      [ 1098.774968] [<0>] mdt_intent_policy+0x1f6/0x380 [mdt]
      [ 1098.776663] [<0>] ldlm_lock_enqueue+0x4df/0xa10 [ptlrpc]
      [ 1098.778220] [<0>] ldlm_handle_enqueue0+0x60f/0x16c0 [ptlrpc]
      [ 1098.779801] [<0>] tgt_enqueue+0xa4/0x1f0 [ptlrpc]
      [ 1098.781230] [<0>] tgt_request_handle+0xc8d/0x18a0 [ptlrpc]
      [ 1098.782742] [<0>] ptlrpc_server_handle_request+0x31a/0xba0 [ptlrpc]
      [ 1098.784345] [<0>] ptlrpc_main+0xbda/0x1480 [ptlrpc]
      [ 1098.785767] [<0>] kthread+0x112/0x130
      [ 1098.786953] [<0>] ret_from_fork+0x35/0x40
      [ 1098.788114] Kernel panic - not syncing: LBUG 

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: